syntax = "proto3";
import "google/protobuf/any.proto";
package LPS.Server.Rpc.InnerMessages;

message DatabaseManagerInnerRpc {
    uint32 rpcId = 1;
    string innerApiName = 2;
    repeated google.protobuf.Any Args = 3;
};

message DatabaseManagerInnerRpcRes {
    uint32 rpcId = 1;
    google.protobuf.Any Res = 2;
};
